start 6.12.8, update check lib