@@ -19,6 +19,7 @@
 * refine web body bean, revisit cache/validation impl 
 * /_sys/, kafka controller, should be call message handler directly?
 * revisit trace log truncation, better/more elegant handling?
+* ControllerInspector: better way to deal with JDK12, add "--add-opens java.base/jdk.internal.reflect=ALL-UNNAMED" ?
 
 ### jdk 11 issues
 * spotbugs: OBL bug https://github.com/spotbugs/spotbugs/issues/432  
